Chapter08/Ch08_10-aws-certificate-manager/source/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2048
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-08df9d898f8078eca, subnet-059e10a2bf764f9bc
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:ap-northeast-2:939823608919:certificate/8206bc78-8d03-4d4c-8d8d-32a1620dbf82'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
spec:
  rules:
    - host: test.gunna-test.click
      http:
        paths:
          - backend:
              service:
                name: service-2048
                port:
                  number: 443
            path: /
            pathType: Prefix
          - backend:
              service:
                name: service-2048
                port:
                  number: 80
            path: /
            pathType: Prefix
